--- a/package.json
+++ b/package.json
@@ -1,37 +1,17 @@
 {
-  "name": "OpenShift-Sample-App",
-  "version": "1.0.0",
-  "description": "OpenShift Sample Application",
-  "keywords": [
-    "OpenShift",
-    "Node.js",
-    "application",
-    "openshift"
-  ],
-  "author": {
-    "name": "ATUL",
-    "email": "atulanand94@gmail.com",
-    "url": "http://www.openshift.com/"
-  },
-  "homepage": "http://www.openshift.com/",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/openshift/origin-server"
-  },
-  "engines": {
-    "node": ">= 0.6.0",
-    "npm": ">= 1.0.0"
+  "name": "TradingIdea",
+  "version": "0.0.0",
+  "private": true,
+  "scripts": {
+    "start": "node ./bin/www"
   },
   "dependencies": {
-    "body-parser": "^1.13.1",
-    "cookie-parser": "^1.3.5",
-    "debug": "^2.2.0",
-    "express": "^4.13.0",
-    "morgan": "^1.6.0",
-    "passport": "^0.2.2"
-  },
-  "devDependencies": {},
-  "bundleDependencies": [],
-  "private": true,
-  "main": "server.js"
+    "body-parser": "~1.13.2",
+    "cookie-parser": "~1.3.5",
+    "debug": "~2.2.0",
+    "express": "~4.13.1",
+    "express-handlebars": "^3.0.0",
+    "morgan": "~1.6.1",
+    "serve-favicon": "~2.3.0"
+  }
 }
